test/runnable/imports/opover7177b.d
module imports.opover7177b;

auto opDollar(size_t dim, R)(R r) { return r.length; }
