test/fail_compilation/imports/test2830e.d
module imports.test2830e;

private enum TestEnum { A, }
